<resources>
    <string name="app_name">FBox Tester</string>
    <string name="main_menu_title">FBOX TESTER</string>
    <string name="main_menu_start">Start</string>
    <string name="main_menu_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_server_address_hint">Server Address</string>
    <string name="settings_server_port_hint">Server port</string>
    <string name="settings_server_address_helper">Enter the server address (e.g. 172.20.0.226)</string>
    <string name="settings_server_port_helper">Enter the server port number (e.g. 8080)</string>
    <string name="settings_enable_sending_to_server">Enable sending data to the server</string>
    <string name="settings_save_changes">Save changes</string>
    <string name="settings_server_connection_section">Server Connection</string>
    <string name="settings_server_address_valitation_error">Incorrect server IP</string>
    <string name="settings_server_port_valitation_error">Incorrect server port</string>
    <string name="settings_settings_saved_toast">Settings saved.</string>
    <string name="session_manager_title">Session Manager</string>
    <string name="log_wall_correct">Correct</string>
    <string name="log_wall_displacement">Displacement</string>
    <string name="log_wall_other_error">Other error</string>
    <string name="log_thrower_excitation">Excitation</string>
    <string name="log_thrower_no_launch">No launch</string>
    <string name="log_thrower_other">Other Error</string>
    <string name="log_thrower_correct">Correct</string>
    <string name="session_manager_directory_selection_error">Failed to select directory!</string>
    <string name="session_manager_file_selection_error">Failed to select file!</string>
    <string name="session_manager_common_error">Error! Something went wrong.</string>
    <string name="logger_title">Logger</string>
    <string name="stats_title">Statistics</string>
    <string name="main_menu_stats">Statistics</string>
    <string name="session_manager_create_new_session_button">Create new session</string>
    <string name="session_manager_create_new_session_description">Create a new session. You will be prompted to choose the default folder, and then a new session will be created.</string>
    <string name="session_manager_import_session_button">Import session from file</string>
    <string name="session_manager_import_session_description">Load an existing session from a file. You will be prompted to select a session file from storage.</string>
    <string name="session_manager_last_session_name">Last session: %s</string>
    <string name="session_manager_continue_last_session_button">Continue last session</string>
    <string name="stats_import_import_session_description">Load an existing session(s) from a file. You will be prompted to select a session file(s) from storage.</string>
    <string name="stats_import_import_session_button">Import session(s) from file</string>
    <string name="logger_wall_1_name">W1</string>
    <string name="logger_wall_2_name">W2</string>
    <string name="logger_wall_3_name">W3</string>
    <string name="logger_wall_4_name">W4</string>
    <string name="logger_thrower_1_name">T1</string>
    <string name="logger_thrower_2_name">T2</string>
    <string name="logger_thrower_3_name">T3</string>
    <string name="logger_thrower_4_name">T4</string>
    <string name="logger_thrower_5_name">T5</string>
    <string name="logger_thrower_6_name">T6</string>
</resources>