<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="pl.silsense.fboxtester.logger.LoggerViewModel" />
        <import type="pl.silsense.fboxtester.log.LogType"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:fitsSystemWindows="true">

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_wall_correct"
            android:textSize="24sp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:onClick="@{() -> viewModel.selectLogType(LogType.WALL_CORRECT)}"/>

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_wall_displacement"
            android:textSize="24sp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:onClick="@{() -> viewModel.selectLogType(LogType.WALL_DISPLACEMENT)}"/>

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_wall_other_error"
            android:textSize="24sp"
            android:padding="16dp"
            android:onClick="@{() -> viewModel.selectLogType(LogType.WALL_OTHER)}"/>

    </LinearLayout>

</layout>
